istio/destination-rule.yaml
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: lookup-service
  namespace: application
spec:
  host: lookup-service.application.svc.cluster.local
  trafficPolicy:
    outlierDetection:
      consecutive5xxErrors: 7
      interval: 30s
      baseEjectionTime: 30s
  subsets:
    - labels:
        version: '1'
      name: v1
